bdo element uses bidi-override instead of isolate-override

https://bugs.webkit.org/show_bug.cgi?id=283765
rdar://problem/140662417

Reviewed by Alan Baradlay.

This patch aligns WebKit with web specification [1]:

https://html.spec.whatwg.org/multipage/rendering.html#bidi-rendering

As per web specification, `bdo` should be `unicode-bidi: isolate-override`
instead of `bidi-override`. This also align us with Gecko / Firefox and
Blink / Chromium.

It is covered by existing imported WPT test case below:
> html/rendering/bidi-rendering/unicode-bidi-ua-rules.html

Since we haven't aligned with web specification fully, we progress only few more
sub-tests pass for `UA stylesheet rule for unicode-bidi, for <bdo>`.

In 259172@main , WebKit fixed bug to handle bidirectional override and corresponding
glyph content width but it failed to account for `isolate-override`, this fixes it as well.

* Source/WebCore/css/html.css:
(bdo, bdo[dir]):
(bdo): Deleted.
* Source/WebCore/layout/formattingContexts/inline/text/TextUtil.cpp:
(TextUtil::width):
* LayoutTests/fast/css/default-bidi-css-rules-expected.txt:
* LayoutTests/fast/css/default-bidi-css-rules.html:
* LayoutTests/fast/text/international/bidi-LDB-2-HTML.html:

Canonical link: https://commits.webkit.org/287175@main